--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "msgpack": "^1.0.2",
     "rabbitmq-node": "^0.5.0",
     "uniqid": "^4.1.1"
+  },
+  "devDependencies": {
+    "semantic-release-gitlab": "^4.1.3"
   }
 }
