--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,5 +13,5 @@ publish:
     - tags
     - triggers
   script:
-    - echo '//registry.npmjs.org/:_authtoken=${NPM_TOKEN}'>.npmrc
+    - echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}'>.npmrc
     - npm publish
