--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A message client that connects to a message broker and sends and receives messages",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postversion": "git push --follow-tags"
   },
   "keywords": [
     "micro-service",
