--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "message-client",
-  "version": "0.0.4",
+  "version": "1.0.0-0",
   "description": "A message client that connects to a message broker and sends and receives messages",
   "main": "index.js",
   "scripts": {
