--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postversion": "git push --follow-tags"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tjma2001/message-client"
+  },
   "keywords": [
     "micro-service",
     "messaging"
